# the-annotated-transfomer

./: .gitignore  README.md  pyproject.toml
output/figures/: example_mask.html  label_smoothing_viz.html  penalization_viz.html  positional_encoding.html
src/: train.py
src/data/: loader.py
src/model/: attention.py  decoder.py  encoder.py  layers.py  transformer.py
src/optim/: loss.py  optimizer.py  reguralizer.py
src/utils/: helpers.py
tests/: greedy_decoding.py  test_model.py
vizualisations/: __init__.py  attention_viz.py  label_smoothing_viz.py  pe_viz.py  scheduler_viz.py
