[tool.poetry]
name = "the-annotated-transformer"
version = "0.1.0"
description = "An implementation of the annotated transformer"
authors = ["Léo Innocenzi <leo.innocenzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
pandas = "^2.2.2"
torchdata = "^0.7.1"
torchtext = "^0.18.0"
spacy = "^3.7.5"
altair = "^5.3.0"
altair-saver = "^0.5.0"
altair-viewer = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
